docs: add S3 internal architecture (erasure coding, shuffle sharding, checksums, cell architecture, two random choices)

--- a/s3.md
+++ b/s3.md
@@ -10,6 +10,130 @@ Amazon S3 là dịch vụ **object storage** với khả năng mở rộng khôn
 
 AWS đạt được điều này bằng cách **tự động replicate mỗi object sang ≥3 Availability Zones** trong cùng Region - bạn không cần cấu hình gì.
 
+### Erasure Coding - Kỹ thuật đằng sau 11 nines
+
+AWS sử dụng **Erasure Coding** thay vì replicate 3 bản copy đầy đủ, giúp tiết kiệm storage và vẫn đạt durability cao.
+
+**Cách hoạt động (ví dụ cấu hình 5+4):**
+
+```
+Original file: 1 GB
+      ↓
+┌─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┐
+│ D1  │ D2  │ D3  │ D4  │ D5  │ P1  │ P2  │ P3  │ P4  │
+└─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┘
+  5 data chunks        +      4 parity chunks
+
+Total: 9 chunks phân tán qua ≥3 AZs
+Storage overhead: 180% (thay vì 300% với 3x replication)
+```
+
+**Fault Tolerance:**
+
+| Mất chunks | Chunks còn lại | Kết quả |
+|------------|---------------|---------|
+| 0-4 | 5-9 | ✅ Recover được |
+| **5+** | **< 5** | ❌ **Mất data** |
+
+> Cần ít nhất **5 chunks bất kỳ** để rebuild data gốc.
+
+**Tại sao vẫn đạt 11 nines?**
+- Chunks phân tán cross-AZ → mất cả 1 AZ vẫn OK
+- **Auto-healing**: AWS liên tục check và rebuild chunks bị corrupt
+- Xác suất mất 5+ chunks đồng thời: ~10^-15
+
+> ⚠️ **Lưu ý**: AWS không công bố chính xác cấu hình erasure coding. 5+4 là thông tin từ nguồn phân tích bên ngoài.
+
+### Các kỹ thuật Internal khác của S3
+
+#### 1. Checksums & Data Integrity
+
+S3 sử dụng checksums để đảm bảo data không bị corrupt:
+
+```
+UPLOAD:
+  Client tính checksum (MD5, SHA-256, CRC32...)
+       ↓
+  Gửi file + checksum lên S3
+       ↓
+  S3 tính lại checksum trên server
+       ↓
+  So sánh: khớp → store | không khớp → reject ❌
+
+DATA AT REST (liên tục):
+  Background job quét storage
+       ↓
+  Phát hiện "bit rot" (data corrupt theo thời gian)
+       ↓
+  Tự động repair từ chunk ở AZ khác
+```
+
+#### 2. Shuffle Sharding - Giảm "Blast Radius"
+
+Thay vì assign cố định buckets vào drives, AWS random assign:
+
+```
+FIXED (bad):                    SHUFFLE SHARDING (good):
+─────────────                   ─────────────────────────
+Bucket A → Drives {1, 2}        Bucket A → Drives {1, 5} (random)
+Bucket B → Drives {1, 2}        Bucket B → Drives {2, 7} (random)
+                               
+Nếu Drive 1,2 chết:             Nếu Drive 1,2 chết:
+→ A,B mất 100% ❌               → A mất 50%, B mất 50%
+                                → Không ai mất hoàn toàn ✅
+```
+
+**Lợi ích:**
+- **Fault isolation**: Lỗi không lan rộng
+- **Giảm blast radius**: Mỗi bucket chỉ bị ảnh hưởng một phần
+
+#### 3. Cell-based Architecture
+
+S3 được chia thành các "cells" độc lập:
+
+```
+AWS Region = "Supercell"
+  ┌─────────────┐  ┌─────────────┐  ┌─────────────┐
+  │   Cell 1    │  │   Cell 2    │  │   Cell 3    │
+  │  (S3 subset)│  │  (S3 subset)│  │  (S3 subset)│
+  └─────────────┘  └─────────────┘  └─────────────┘
+        │                │                │
+        └────────────────┴────────────────┘
+                         │
+              Cells KHÔNG share state
+              Lỗi Cell 1 không ảnh hưởng Cell 2,3
+```
+
+#### 4. Two Random Choices (Load Balancing)
+
+Khi cần lưu object vào drive:
+
+```
+Step 1: Random chọn 2 drives (A và B)
+Step 2: Check utilization (% đã dùng) của cả 2
+Step 3: Chọn drive có utilization THẤP hơn
+
+Ví dụ:
+  Drive A: 75% full ████████░░░
+  Drive B: 30% full ███░░░░░░░░
+  → Chọn Drive B (còn trống nhiều hơn)
+```
+
+**Tại sao chỉ cần 2?**
+- Random 1: Có thể chọn trúng drive đã full
+- Check tất cả: Quá chậm (hàng nghìn drives)
+- **Two Random Choices**: Nhanh + load khá đều (toán học chứng minh!)
+
+#### Tổng kết các kỹ thuật
+
+| Kỹ thuật | Mục đích |
+|----------|----------|
+| **Erasure Coding** | Durability với ít storage overhead |
+| **Checksums** | Phát hiện và sửa data corruption |
+| **Shuffle Sharding** | Fault isolation, giảm blast radius |
+| **Cell Architecture** | Isolate failures giữa các cells |
+| **Two Random Choices** | Load balancing storage |
+
 **Ngoại lệ** (chỉ lưu trong 1 AZ, durability thấp hơn nếu AZ gặp sự cố):
 - S3 One Zone-IA
 - S3 Express One Zone
