Add Messaging & Streaming documentation: SQS, SNS, Kinesis, Amazon MQ, EventBridge, and Global Applications Architecture

--- a/s3.md
+++ b/s3.md
@@ -702,6 +702,26 @@ S3 tính phí theo:
 
 ---
 
+## S3 Transfer Acceleration
+
+Tăng tốc upload/download files qua long distances bằng AWS Edge Locations.
+
+```
+WITHOUT Acceleration:        WITH Acceleration:
+User ──► Internet ──► S3     User ──► Edge ══► AWS Backbone ══► S3
+         (slow)                       (fast)    (optimized)
+```
+
+**Key points:**
+- Dùng endpoint: `bucket-name.s3-accelerate.amazonaws.com`
+- **Chỉ charge khi nhanh hơn** (AWS tự động bypass nếu không cải thiện)
+- Pricing: ~$0.04-0.08/GB
+- Hiệu quả nhất khi: client xa bucket, file lớn
+
+📖 **Xem chi tiết:** [S3 Transfer Acceleration Deep Dive](s3-transfer-acceleration.md)
+
+---
+
 ## So sánh với EBS và EFS
 
 | Feature | S3 | EBS | EFS |
