Add S3 documentation: Requester Pays, Event Notifications, Performance, Storage Lens

--- a/s3.md
+++ b/s3.md
@@ -8,10 +8,14 @@
 - [Storage Classes](#storage-classes)
 - [Storage Management](#storage-management)
 - [Access Management & Security](#access-management-security)
+- [S3 Performance](#s3-performance)
 - [Data Processing](#data-processing)
+  - [S3 Object Lambda](#s3-object-lambda)
+  - [Event Notifications](#event-notifications)
 - [Monitoring & Analytics](#monitoring-analytics)
 - [Data Consistency](#data-consistency)
 - [Pricing](#pricing)
+- [Requester Pays](#requester-pays)
 - [Best Practices](#best-practices)
 - [S3 Transfer Acceleration](#s3-transfer-acceleration)
 - [So sánh với EBS và EFS](#so-sánh-với-ebs-và-efs)
@@ -646,6 +650,145 @@ Scenario: Ngân hàng cần giữ records 7 năm (compliance)
 
 ---
 
+## S3 Performance
+
+### Baseline Performance
+
+S3 có khả năng xử lý **rất cao** out-of-the-box:
+
+| Metric | Per Prefix |
+|--------|------------|
+| **GET/HEAD requests** | 5,500 requests/second |
+| **PUT/COPY/POST/DELETE** | 3,500 requests/second |
+
+> **Prefix** = phần path trước object name. Ví dụ: `bucket/folder1/subfolder/` là 1 prefix.
+
+```
+Ví dụ: Bucket với nhiều prefixes
+
+s3://my-bucket/images/2024/   ← 5,500 GET/s + 3,500 PUT/s
+s3://my-bucket/images/2025/   ← 5,500 GET/s + 3,500 PUT/s  
+s3://my-bucket/videos/        ← 5,500 GET/s + 3,500 PUT/s
+
+→ Dùng nhiều prefixes = Scale gần như vô hạn!
+```
+
+### Tối ưu Performance
+
+#### 1. Multi-Part Upload
+
+**Bắt buộc** cho files > 5GB, **khuyến nghị** cho files > 100MB.
+
+```
+┌─────────────────────────────────────────────────────────────────┐
+│                    MULTI-PART UPLOAD                             │
+├─────────────────────────────────────────────────────────────────┤
+│                                                                  │
+│  File 1GB                                                        │
+│  ┌─────────────────────────────────────────────────────────┐    │
+│  │ Part 1 │ Part 2 │ Part 3 │ Part 4 │ ... │ Part 10      │    │
+│  │ 100MB  │ 100MB  │ 100MB  │ 100MB  │     │ 100MB        │    │
+│  └───┬────┴───┬────┴───┬────┴───┬────┴─────┴───┬──────────┘    │
+│      │        │        │        │              │                │
+│      ▼        ▼        ▼        ▼              ▼                │
+│   Upload   Upload   Upload   Upload         Upload              │
+│   song song (parallel) → NHANH HƠN!                             │
+│      │        │        │        │              │                │
+│      └────────┴────────┴────────┴──────────────┘                │
+│                         │                                        │
+│                         ▼                                        │
+│                  S3 ghép lại thành 1 file                       │
+│                                                                  │
+│  ✅ Upload song song nhiều parts                                │
+│  ✅ Retry chỉ parts failed (không retry cả file)                │
+│  ✅ Bắt đầu upload khi vẫn đang generate file                   │
+│                                                                  │
+└─────────────────────────────────────────────────────────────────┘
+```
+
+#### 2. S3 Transfer Acceleration
+
+Upload/download qua AWS Edge Locations thay vì public internet.
+
+```
+WITHOUT Acceleration:        WITH Acceleration:
+User ──► Internet ──► S3     User ──► Edge ══► AWS Backbone ══► S3
+         (slow)                       (fast)    (optimized)
+```
+
+- Endpoint: `bucket-name.s3-accelerate.amazonaws.com`
+- Chỉ charge khi thực sự nhanh hơn
+- Tốt cho: long-distance transfers, large files
+
+#### 3. Byte-Range Fetches (Parallel Downloads)
+
+Download một phần file hoặc download song song nhiều phần.
+
+```
+┌─────────────────────────────────────────────────────────────────┐
+│                    BYTE-RANGE FETCHES                            │
+├─────────────────────────────────────────────────────────────────┤
+│                                                                  │
+│  File 1GB trên S3                                                │
+│  ┌─────────────────────────────────────────────────────────┐    │
+│  │ 0-100MB │ 100-200MB │ 200-300MB │ ... │ 900MB-1GB      │    │
+│  └───┬─────┴─────┬─────┴──────┬────┴─────┴───────┬────────┘    │
+│      │           │            │                   │              │
+│      ▼           ▼            ▼                   ▼              │
+│  GET byte=0-100MB  GET byte=100-200MB  ...  GET byte=900-1GB    │
+│      │           │            │                   │              │
+│      └───────────┴────────────┴───────────────────┘              │
+│                          │                                       │
+│                          ▼                                       │
+│                   Ghép lại ở client                              │
+│                                                                  │
+│  ✅ Download song song (parallel) → NHANH HƠN                   │
+│  ✅ Retry chỉ phần failed                                       │
+│  ✅ Download chỉ phần cần thiết (vd: header của video)          │
+│                                                                  │
+└─────────────────────────────────────────────────────────────────┘
+```
+
+**Use cases:**
+- Parallel download để tăng tốc
+- Download chỉ metadata/header của file
+- Resume download bị gián đoạn
+
+#### 4. S3 Select / Glacier Select
+
+Query data trực tiếp trong S3 mà không cần download toàn bộ file.
+
+```
+Truyền thống:
+Download 1GB CSV → Filter ở client → Chỉ cần 10MB data
+→ Tốn bandwidth, chậm
+
+S3 Select:
+Query trực tiếp trên S3 → Chỉ trả về 10MB data cần
+→ Tiết kiệm bandwidth, nhanh hơn
+```
+
+```sql
+-- S3 Select query (SQL-like)
+SELECT s.name, s.age FROM S3Object s WHERE s.age > 25
+```
+
+**Hỗ trợ formats:** CSV, JSON, Parquet
+
+### Tóm tắt Performance Optimizations
+
+| Technique | Use Case | Benefit |
+|-----------|----------|---------|
+| **Multi-Part Upload** | Files > 100MB | Parallel upload, retry parts |
+| **Transfer Acceleration** | Long distance | Faster via Edge Locations |
+| **Byte-Range Fetches** | Large downloads | Parallel download, partial fetch |
+| **S3 Select** | Query large files | Reduce data transfer |
+| **Multiple Prefixes** | High throughput | Scale requests linearly |
+
+> **Nguồn:** [S3 Performance Guidelines](https://docs.aws.amazon.com/AmazonS3/latest/userguide/optimizing-performance.html)
+
+---
+
 ## Data Processing
 
 ### S3 Object Lambda
@@ -655,11 +798,153 @@ Scenario: Ngân hàng cần giữ records 7 năm (compliance)
 
 ### Event Notifications
 
-Trigger workflows khi có changes trong S3:
-- **Amazon SNS** - push notifications
-- **Amazon SQS** - queue messages
-- **AWS Lambda** - serverless processing
-- **Amazon EventBridge** - event routing
+Trigger workflows khi có changes trong S3.
+
+#### Cách hoạt động
+
+```
+┌─────────────────────────────────────────────────────────────────┐
+│                    S3 EVENT NOTIFICATIONS                        │
+├─────────────────────────────────────────────────────────────────┤
+│                                                                  │
+│   S3 Bucket                                                      │
+│   ┌─────────────────────────────────────────────────────────┐   │
+│   │  Object Created (PUT, POST, COPY, MultiPart)            │   │
+│   │  Object Removed (DELETE, DeleteMarkerCreated)           │   │
+│   │  Object Restore (Glacier restore completed)             │   │
+│   │  Replication Events                                      │   │
+│   │  ...                                                     │   │
+│   └─────────────────────────────────────────────────────────┘   │
+│                              │                                   │
+│                              ▼                                   │
+│   ┌─────────────────────────────────────────────────────────┐   │
+│   │                   DESTINATIONS                           │   │
+│   │                                                         │   │
+│   │   ┌─────────┐  ┌─────────┐  ┌─────────┐  ┌───────────┐ │   │
+│   │   │   SNS   │  │   SQS   │  │ Lambda  │  │EventBridge│ │   │
+│   │   └─────────┘  └─────────┘  └─────────┘  └───────────┘ │   │
+│   └─────────────────────────────────────────────────────────┘   │
+│                                                                  │
+└─────────────────────────────────────────────────────────────────┘
+```
+
+#### Các loại Events
+
+| Event Type | Trigger khi |
+|------------|-------------|
+| `s3:ObjectCreated:*` | PUT, POST, COPY, MultipartUpload complete |
+| `s3:ObjectRemoved:*` | DELETE hoặc DeleteMarkerCreated |
+| `s3:ObjectRestore:*` | Glacier restore bắt đầu/hoàn thành |
+| `s3:Replication:*` | Replication failed/completed |
+| `s3:LifecycleExpiration:*` | Object bị xóa bởi lifecycle |
+| `s3:LifecycleTransition` | Object chuyển storage class |
+| `s3:IntelligentTiering` | Object chuyển tier trong IT |
+
+#### Destinations
+
+| Destination | Use Case | Đặc điểm |
+|-------------|----------|----------|
+| **Amazon SNS** | Fan-out (gửi đến nhiều subscribers) | Push notifications, email, SMS |
+| **Amazon SQS** | Queue xử lý tuần tự | Decoupling, retry, batch processing |
+| **AWS Lambda** | Serverless processing | Real-time, custom code |
+| **EventBridge** | Complex routing, filtering | Rules, cross-account, archive |
+
+#### So sánh Destinations
+
+```
+SNS (Fan-out):
+┌─────┐
+│ S3  │──► SNS ──┬──► SQS Queue 1
+└─────┘          ├──► SQS Queue 2  
+                 ├──► Lambda
+                 └──► Email
+
+SQS (Queue):
+┌─────┐          ┌─────────┐
+│ S3  │──► SQS ──► Workers │  (xử lý tuần tự)
+└─────┘          └─────────┘
+
+Lambda (Direct):
+┌─────┐          ┌────────────────────────┐
+│ S3  │──► Lambda (resize image, process) │
+└─────┘          └────────────────────────┘
+
+EventBridge (Advanced):
+┌─────┐                   ┌─► Lambda A (*.jpg)
+│ S3  │──► EventBridge ───┼─► SQS (*.pdf)
+└─────┘     (filter)      └─► SNS (*.mp4)
+```
+
+#### Use Cases phổ biến
+
+| Use Case | Event | Destination | Action |
+|----------|-------|-------------|--------|
+| **Image thumbnail** | ObjectCreated | Lambda | Resize, save thumbnail |
+| **Video transcoding** | ObjectCreated | SQS → MediaConvert | Convert video formats |
+| **Log processing** | ObjectCreated | Lambda → ES | Index logs cho search |
+| **Backup notification** | ObjectCreated | SNS → Email | Notify admin |
+| **Data pipeline** | ObjectCreated | EventBridge → Step Functions | ETL workflow |
+| **Audit trail** | All events | EventBridge → CloudWatch Logs | Logging |
+
+#### Ví dụ: Image Processing Pipeline
+
+```
+┌─────────────────────────────────────────────────────────────────┐
+│                    IMAGE PROCESSING PIPELINE                     │
+├─────────────────────────────────────────────────────────────────┤
+│                                                                  │
+│   User uploads image.jpg                                         │
+│           │                                                      │
+│           ▼                                                      │
+│   ┌───────────────┐                                             │
+│   │ S3 Bucket     │                                             │
+│   │ /uploads/     │                                             │
+│   └───────┬───────┘                                             │
+│           │ s3:ObjectCreated:Put                                │
+│           ▼                                                      │
+│   ┌───────────────┐                                             │
+│   │    Lambda     │                                             │
+│   │ (resize.py)   │                                             │
+│   └───────┬───────┘                                             │
+│           │                                                      │
+│     ┌─────┼─────┐                                               │
+│     ▼     ▼     ▼                                               │
+│   small  med  large                                              │
+│   100px  300px 800px                                             │
+│     │     │     │                                               │
+│     ▼     ▼     ▼                                               │
+│   ┌───────────────┐                                             │
+│   │ S3 Bucket     │                                             │
+│   │ /thumbnails/  │                                             │
+│   └───────────────┘                                             │
+│                                                                  │
+└─────────────────────────────────────────────────────────────────┘
+```
+
+#### Lưu ý quan trọng
+
+> [!IMPORTANT]
+> **Permissions:** Destination (SNS/SQS/Lambda) phải có policy cho phép S3 gửi events.
+
+```json
+// SQS Policy Example
+{
+  "Statement": [{
+    "Effect": "Allow",
+    "Principal": {"Service": "s3.amazonaws.com"},
+    "Action": "sqs:SendMessage",
+    "Resource": "arn:aws:sqs:region:account:queue",
+    "Condition": {
+      "ArnLike": {"aws:SourceArn": "arn:aws:s3:::bucket-name"}
+    }
+  }]
+}
+```
+
+> [!TIP]
+> **EventBridge vs Legacy (SNS/SQS/Lambda):**
+> - **Legacy:** Faster, simpler, direct integration
+> - **EventBridge:** More powerful filtering, routing rules, cross-account, archive events
 
 ---
 
@@ -706,6 +991,98 @@ S3 tính phí theo:
 - 2,000 PUT requests
 
 > **Nguồn:** [Amazon S3 Pricing](https://aws.amazon.com/s3/pricing/)
+
+---
+
+## Requester Pays
+
+**Requester Pays** cho phép bucket owner **chuyển chi phí** data transfer và request sang cho **người request** (requester) thay vì trả tiền tất cả.
+
+### Vấn đề cần giải quyết
+
+```
+TÌNH HUỐNG THÔNG THƯỜNG:
+┌─────────────────────────────────────────────────────────────────┐
+│  Bạn có 100TB dữ liệu research để chia sẻ                       │
+│                                                                  │
+│  User A download 10TB ─┐                                        │
+│  User B download 20TB  ├──► BẠN phải trả ~$2,700/tháng!        │
+│  User C download 30TB ─┘    (data transfer out)                 │
+│                                                                  │
+│  → Càng nhiều người dùng, bạn càng TỐN TIỀN                    │
+└─────────────────────────────────────────────────────────────────┘
+
+VỚI REQUESTER PAYS:
+┌─────────────────────────────────────────────────────────────────┐
+│  Bạn chỉ trả chi phí STORAGE (~$2,300/tháng cho 100TB)         │
+│                                                                  │
+│  User A download 10TB ──► User A trả $900                       │
+│  User B download 20TB ──► User B trả $1,800                     │
+│  User C download 30TB ──► User C trả $0 (nếu cùng region)      │
+│                                                                  │
+│  → Công bằng: ai dùng, người đó trả                            │
+└─────────────────────────────────────────────────────────────────┘
+```
+
+### Chi phí được chuyển cho Requester
+
+| Chi phí | Bucket Owner | Requester |
+|---------|--------------|-----------|
+| **Storage** | ✅ Trả | - |
+| **Data Transfer OUT** | - | ✅ Trả |
+| **GET/PUT Requests** | - | ✅ Trả |
+| **Same-region transfer** | - | Miễn phí |
+
+### Cách hoạt động
+
+```
+1. Bucket owner enable "Requester Pays" trên bucket
+
+2. Requester phải:
+   ├── Có AWS account (authenticated)
+   ├── Gửi request với header: x-amz-request-payer: requester
+   └── Hoặc CLI: --request-payer requester
+
+3. AWS tính phí vào account của requester, không phải bucket owner
+```
+
+**Lưu ý quan trọng:**
+- ❌ **Anonymous access không hoạt động** - Requester PHẢI có AWS account
+- ❌ Không thể dùng pre-signed URLs (vì cần authenticated request)
+- ✅ Bucket owner vẫn control access qua bucket policy
+
+### Use Cases
+
+| Use Case | Mô tả |
+|----------|-------|
+| **Public datasets** | NASA, genome data, weather data - ai dùng, người đó trả |
+| **Data marketplace** | Bán/share data mà không lo chi phí bandwidth |
+| **Research data** | Universities share research data |
+| **Media archives** | Stock photos/videos, download theo nhu cầu |
+
+### Ví dụ CLI
+
+```bash
+# Download từ requester pays bucket
+aws s3 cp s3://requester-pays-bucket/file.txt ./file.txt --request-payer requester
+
+# List objects
+aws s3 ls s3://requester-pays-bucket/ --request-payer requester
+```
+
+### Enable Requester Pays
+
+```bash
+# Enable
+aws s3api put-bucket-request-payment \
+  --bucket my-bucket \
+  --request-payment-configuration Payer=Requester
+
+# Check status
+aws s3api get-bucket-request-payment --bucket my-bucket
+```
+
+> **Nguồn:** [Using Requester Pays buckets](https://docs.aws.amazon.com/AmazonS3/latest/userguide/RequesterPaysBuckets.html)
 
 ---
 
