Add S3 Security documentation and expand S3 features
- Create s3-security.md with comprehensive security topics:
  - Access Control (IAM, Bucket Policies, Access Points)
  - Encryption (SSE-S3, SSE-KMS, SSE-C, default encryption)
  - S3 Block Public Access
  - CORS configuration
  - MFA Delete
  - Pre-signed URLs
  - VPC Endpoints
  - S3 Access Logs
  - Best practices and common mistakes

- Update s3.md:
  - Expand S3 Object Lambda section with examples
  - Add reference to s3-security.md

- Update README.md:
  - Add S3 Storage Lens link
  - Add S3 Security link

--- a/s3.md
+++ b/s3.md
@@ -646,6 +646,8 @@ Scenario: Ngân hàng cần giữ records 7 năm (compliance)
 - **Bucket owner preferred** - bucket owner owns objects nếu upload với `bucket-owner-full-control`
 - **Object writer** - uploader owns the object
 
+> **Xem chi tiết:** [S3 Security](s3-security.md) - Access Control, Encryption, Block Public Access, Pre-signed URLs, VPC Endpoints
+>
 > **Nguồn:** [Amazon S3 Security Features](https://aws.amazon.com/s3/security/)
 
 ---
@@ -793,8 +795,130 @@ SELECT s.name, s.age FROM S3Object s WHERE s.age > 25
 
 ### S3 Object Lambda
 
-- Thêm code xử lý vào GET/HEAD/LIST requests
-- Transform data on-the-fly (resize images, redact data, etc.)
+**S3 Object Lambda** cho phép thêm code để **transform data on-the-fly** khi GET object, mà không cần sửa object gốc.
+
+```
+┌─────────────────────────────────────────────────────────────────┐
+│                    S3 OBJECT LAMBDA                              │
+├─────────────────────────────────────────────────────────────────┤
+│                                                                  │
+│  Truyền thống (không có Object Lambda):                         │
+│                                                                  │
+│  App ──► GET object ──► S3 ──► Raw data                        │
+│  App ──► Transform locally (tốn CPU, memory)                    │
+│                                                                  │
+│  HOẶC: Store nhiều versions (original + transformed)            │
+│        → Tốn storage, phải sync                                 │
+│                                                                  │
+│  ──────────────────────────────────────────────────────────────  │
+│                                                                  │
+│  Với S3 Object Lambda:                                           │
+│                                                                  │
+│  App ──► Object Lambda ──► Lambda Function ──► S3               │
+│          Access Point        (transform)        (raw data)       │
+│               │                   │                              │
+│               └─────► Trả về transformed data                   │
+│                                                                  │
+│  → Chỉ lưu 1 bản gốc, transform khi cần                         │
+│                                                                  │
+└─────────────────────────────────────────────────────────────────┘
+```
+
+#### Cách hoạt động
+
+```
+┌───────────┐    ┌─────────────────────┐    ┌──────────────┐    ┌──────────┐
+│    App    │───►│ Object Lambda       │───►│    Lambda    │───►│    S3    │
+│           │    │ Access Point        │    │   Function   │    │  Bucket  │
+└───────────┘    └─────────────────────┘    └──────────────┘    └──────────┘
+      │                                            │
+      │◄───────── Transformed Response ────────────┘
+```
+
+1. App gọi **Object Lambda Access Point** (không gọi trực tiếp S3)
+2. Object Lambda Access Point invoke **Lambda function**
+3. Lambda lấy object gốc từ S3, transform, trả về cho app
+
+#### Use Cases phổ biến
+
+| Use Case | Mô tả |
+|----------|-------|
+| **Resize images** | Trả về thumbnail thay vì image gốc |
+| **Redact PII** | Che thông tin nhạy cảm (SSN, email...) |
+| **Convert formats** | XML → JSON, PNG → WebP |
+| **Decompress** | Gunzip on-the-fly |
+| **Add watermark** | Thêm watermark vào images |
+| **Filter data** | Trả về subset của data dựa trên user role |
+| **Enrich data** | Thêm metadata từ external source |
+
+#### Ví dụ: Redact PII
+
+```
+┌─────────────────────────────────────────────────────────────────┐
+│  Original JSON in S3:                                            │
+│  {                                                                │
+│    "name": "John Doe",                                           │
+│    "email": "john@example.com",    ← PII                         │
+│    "ssn": "123-45-6789",           ← PII                         │
+│    "department": "Engineering"                                   │
+│  }                                                                │
+│                                                                  │
+│  After Object Lambda (redact):                                   │
+│  {                                                                │
+│    "name": "John Doe",                                           │
+│    "email": "***REDACTED***",      ← Đã che                      │
+│    "ssn": "***REDACTED***",        ← Đã che                      │
+│    "department": "Engineering"                                   │
+│  }                                                                │
+└─────────────────────────────────────────────────────────────────┘
+```
+
+#### Lambda Function Example (Node.js)
+
+```javascript
+const { S3 } = require('@aws-sdk/client-s3');
+
+exports.handler = async (event) => {
+  // Get object từ S3
+  const s3Client = new S3();
+  const response = await s3Client.getObject({
+    Bucket: event.getObjectContext.inputS3Url,
+  });
+  
+  // Transform data
+  const originalData = await response.Body.transformToString();
+  const jsonData = JSON.parse(originalData);
+  
+  // Redact PII
+  jsonData.email = "***REDACTED***";
+  jsonData.ssn = "***REDACTED***";
+  
+  // Return transformed data
+  await s3Client.writeGetObjectResponse({
+    RequestRoute: event.getObjectContext.outputRoute,
+    RequestToken: event.getObjectContext.outputToken,
+    Body: JSON.stringify(jsonData),
+  });
+  
+  return { statusCode: 200 };
+};
+```
+
+#### So sánh với các giải pháp khác
+
+| Approach | Storage | Performance | Flexibility |
+|----------|---------|-------------|-------------|
+| Store multiple versions | ❌ Nhiều | ✅ Nhanh | ❌ Phải sync |
+| Transform on client | ✅ 1 bản | ❌ Chậm | ✅ Linh hoạt |
+| **S3 Object Lambda** | ✅ 1 bản | ⚡ Tốt | ✅ Linh hoạt |
+
+#### Pricing
+
+- **Lambda invocation**: Tính như Lambda bình thường
+- **Data transfer**: Từ S3 → Lambda → Client
+- **No additional Object Lambda fee**
+
+> 💡 **Khi nào dùng:** Khi cần transform data nhưng không muốn lưu nhiều versions, hoặc transformation phụ thuộc vào context (user role, request params...).
 
 ### Event Notifications
 
