Add AWS networking and storage documentation
New files:
- global-accelerator.md: Network acceleration, Static Anycast IPs, TCP/UDP, Gaming/IoT
- aws-transfer-family.md: Managed SFTP/FTPS/FTP/AS2, File Transfer to S3/EFS
- aws-datasync.md: Data migration, Bulk transfer, On-premises to AWS sync

Updated files:
- cloudfront.md: Refactor Global Accelerator section to reference separate doc
- s3.md: Add comparison S3 Transfer Acceleration vs Global Accelerator
- README.md: Add links for new docs in Networking and Storage sections

--- a/s3.md
+++ b/s3.md
@@ -1241,6 +1241,33 @@ User ──► Internet ──► S3     User ──► Edge ══► AWS Backb
 
 📖 **Xem chi tiết:** [S3 Transfer Acceleration Deep Dive](s3-transfer-acceleration.md)
 
+### S3 Transfer Acceleration vs Global Accelerator
+
+> ⚠️ **Câu hỏi thường gặp:** Hai dịch vụ này **KHÁC NHAU** nhưng cùng dùng AWS Edge Locations!
+
+```
+S3 Transfer Acceleration:
+User ──► Edge Location ──► AWS Backbone ──► S3 Bucket
+• CHỈ cho S3 uploads/downloads
+• URL: bucket.s3-accelerate.amazonaws.com
+
+Global Accelerator:
+User ──► Edge Location ──► AWS Backbone ──► ALB/NLB/EC2
+• Cho BẤT KỲ TCP/UDP application
+• KHÔNG hỗ trợ S3 trực tiếp
+```
+
+| Feature | S3 Transfer Acceleration | Global Accelerator |
+|---------|--------------------------|-------------------|
+| **Mục đích** | Tăng tốc S3 upload/download | Tăng tốc any TCP/UDP app |
+| **Hỗ trợ S3?** | ✅ Có (chính) | ❌ Không |
+| **Hỗ trợ ALB/EC2?** | ❌ Không | ✅ Có |
+| **Static IP** | ❌ Không | ✅ 2 Anycast IPs |
+| **Failover** | ❌ Không | ✅ Instant failover |
+| **Cách bật** | Per-bucket setting | Tạo Accelerator riêng |
+
+> 💡 **Tóm lại:** S3 Transfer Acceleration = "Global Accelerator cho riêng S3"
+
 ---
 
 ## So sánh với EBS và EFS
